--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,6 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".DetalleActivity">
-        </activity>
         <activity
                 android:name=".MainActivity"
                 android:label="@string/app_name"
@@ -21,6 +19,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".DetalleActivity"
+                  android:parentActivityName=".MainActivity"/>
         <activity
                 android:name=".AddTareaActivity"
                 android:parentActivityName=".MainActivity"/>
