reforma de bbdd y creacion de GestionCategorias

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,14 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".DetalleActivity"
-                  android:parentActivityName=".MainActivity"/>
+        <activity
+                android:name=".DetalleActivity"
+                android:parentActivityName=".MainActivity"/>
         <activity
                 android:name=".AddTareaActivity"
+                android:parentActivityName=".MainActivity"/>
+        <activity
+                android:name=".GestionCategoriasActivity"
                 android:parentActivityName=".MainActivity"/>
     </application>
 
