mapa de categorías

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
                 android:parentActivityName=".activities.MainActivity"/>
         <activity
                 android:name=".activities.GestionCategoriasActivity"
+                android:windowSoftInputMode="stateHidden"
                 android:parentActivityName=".activities.MainActivity"/>
 
         <receiver android:name=".Util.BroadcastReceiver">
