--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.miguelmartin.organizame">
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -15,7 +17,6 @@
                 android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
@@ -27,7 +28,7 @@
                 android:windowSoftInputMode="stateHidden"
                 android:parentActivityName=".activities.MainActivity"/>
 
-        <receiver android:name=".Util.BroadcastReceiver">
+        <receiver android:name=".util.BroadcastReceiver">
             <intent-filter>
                 <action android:name="com.miguelmartin.organizame.reminder"/>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
