V 3.0 terminado añadir categoria dentro de añadir tarea, acabado

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,7 @@
                 android:parentActivityName=".activities.MainActivity"/>
         <activity
                 android:name=".activities.GestionCategoriasActivity"
-                android:windowSoftInputMode="stateHidden"
-                android:parentActivityName=".activities.MainActivity"/>
+                android:windowSoftInputMode="stateHidden"/>
 
         <receiver android:name=".util.BroadcastReceiver">
             <intent-filter>
